[gd_scene load_steps=10 format=3 uid="uid://bibtlnldw1kmg"]

[ext_resource type="Texture2D" uid="uid://b71byjcc75k3d" path="res://Assets/others/fundo_menu.png" id="1_2hmuh"]
[ext_resource type="Script" path="res://Scripts/menu_principal.gd" id="1_15bsg"]
[ext_resource type="FontFile" uid="uid://dwy8mkuhy8rpq" path="res://Assets/fonts/Pixellari.ttf" id="2_583uq"]
[ext_resource type="Texture2D" uid="uid://cnv5duu2v48q2" path="res://Assets/others/titulo.png" id="3_8i8dm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mqaff"]
texture = ExtResource("1_2hmuh")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vsf1k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_02wnv"]
bg_color = Color(0.76662, 0.76662, 0.76662, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 20
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xcgcb"]
bg_color = Color(0.593134, 0.593134, 0.593134, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hs8ch"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 5

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 11.0
offset_right = -1.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_15bsg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -12.0
offset_right = 1.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mqaff")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 402.0
offset_top = 325.0
offset_right = 733.0
offset_bottom = 568.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Jogar" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_583uq")
theme_override_font_sizes/font_size = 38
theme_override_styles/focus = SubResource("StyleBoxEmpty_vsf1k")
theme_override_styles/hover = SubResource("StyleBoxFlat_02wnv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xcgcb")
theme_override_styles/normal = SubResource("StyleBoxFlat_hs8ch")
text = "Jogar
"

[node name="Controles" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_583uq")
theme_override_font_sizes/font_size = 38
theme_override_styles/focus = SubResource("StyleBoxEmpty_vsf1k")
theme_override_styles/hover = SubResource("StyleBoxFlat_02wnv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xcgcb")
theme_override_styles/normal = SubResource("StyleBoxFlat_hs8ch")
text = "Controles
"

[node name="Sair" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_583uq")
theme_override_font_sizes/font_size = 38
theme_override_styles/focus = SubResource("StyleBoxEmpty_vsf1k")
theme_override_styles/hover = SubResource("StyleBoxFlat_02wnv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xcgcb")
theme_override_styles/normal = SubResource("StyleBoxFlat_hs8ch")
text = "Sair
"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.5
offset_top = -329.0
offset_right = 253.5
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_8i8dm")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Controles" to="." method="_on_controles_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Sair" to="." method="_on_sair_pressed"]
